# python_default_configurations

./: .dockerignore  .env.default  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
compose/changeme/: Dockerfile
